[Index] Consertado os bugs de Z-index do plugin do GliderJs / Adicionado funcionalidade de AutoScroll do Carrossel

--- a/TsukiWeb/wwwroot/css/Index.css
+++ b/TsukiWeb/wwwroot/css/Index.css
@@ -3,6 +3,12 @@
     z-index: -1 !important;
 }
 
-.glider-dots{
-    z-index: -1 !important;
+/* .glider-contain{
+    z-index: 0 !important;
+} */
+
+.dropdown-menu:hover{
+    z-index: 1000 !important;
 }
+
+
